--- a/Parcial 2.html
+++ b/Parcial 2.html
@@ -1,75 +1,41 @@
 /*Codigo de referencia realizado en la anterior sesion (10)-Tomado por el profesor:Hector murcia*/
 /*Parcial Segundo corte-Juliana Marin Marroquin-6000549*/
 
-
-<!DOCTYPE html>
-<html lang="es"
-<input type=text size=2 id='nf'/>
+<input type=text size=100 height=600 id='tablero'/>
 <button onclick='main()'>Ejecutar</button>
-<head>
-   <meta charset="UTF-8">
-   <meta name"viewport" content="width=device-width, initíal-scale=1.0">
-</head>
-<body>
 
-<div id="contenedor">
-	<div class="color-1"></div>
-	<div class="color-2"></div>
-	<div class="color-3"></div>
-	<div class="color-4"></div>
-	<div class="color-5"></div>
-	<div class="color-6"></div>
-	<div class="color-7"></div>
-	<div class="color-8"></div>
-	<div class="color-9"></div>
-	<div class="color-10"></div>
-<div>
-<div id="general">
-
-</div>
-
-<style>
-	#contenedor{
-                position: relative; right: 280px; top: 10px;  
-		margin:20px auto;
-		width:80;
-		max-width:652px;
-	}
-	div[class *= "color-"]{
-		width:100%;
-		max-width:600px;
-		border:1px solid #000000;
-		padding:25px;
-	}
-	
-
-	
-        .color-1{background-color:rgba(0,0,255,1);}
-	.color-2{background-color:rgba(0,0,255,0.9);}
-	.color-3{background-color:rgba(0,0,255,0.8);}
-	.color-4{background-color:rgba(0,0,255,0.7);}
-	.color-5{background-color:rgba(0,0,255,0.6);}
-	.color-6{background-color:rgba(0,0,255,0.5);}
-	.color-7{background-color:rgba(0,0,255,0.4);}
-	.color-8{background-color:rgba(0,0,255,0.3);}
-	.color-9{background-color:rgba(0,0,255,0.2);}
-	.color-10{background-color:rgba(0,0,255,0.1);
-}
-	
-</style>
-
+<canvas id='lienzo'width=800 height=800></canvas>
 <script>
-
 var ctx;
-var nc = parseInt(document.getElementById('nf').value)
-	    alert(nc + 1)
 
-var[azul] = [color(0,0,1),'#BF0',#F00E'];}	
+function colores(r, g ,b){
+return 'rgba(' + r*2.55 + ',' + g*2.55 +','+ b*2.55 +')'
+}
 
- 
-  
+function main(){
+var c = document.getElementById('lienzo')
+ctx = c.getContext('2d');
 
-</div><br>
+var nc = parseInt(document.getElementById('tablero').value)
 
 
-</script></body></html>
+for(let i =0;i<3 ; i++){
+      for(let j=0;j<nc;j++){
+
+if(i==0){
+ctx.fillStyle = colores(100*(nc-j)/nc,0,0);
+
+}else if (i==1) {
+ctx.fillStyle = colores(0,0,100*(nc-j)/nc);
+
+}else if (i==2) {
+ctx.fillStyle = colores(0,100*(nc-j)/nc,0,0,0);
+}
+ctx.fillRect(i*180, j*150/nc, 150, 150/nc);
+}
+}
+}
+
+
+
+</script>
